# news

./: .uncrustify  AUTHORS  README.md  meson.build  py-configure
data/: appmenu.ui  gnome-news-resource.xml  meson.build  news-resource.xml  org.gnome.News.desktop
data/icons/: meson.build
data/theme/: Adwaita.css  articlebox.html
data/ui/: article.ui  articlerow.ui  window.ui
package/: PKGBUILD
src/: controller.vala  feed.vala  gnome-news-application-window.vala  gnome-news-application.vala  gnome-news-article-box.vala  gnome-news-article-list.vala  gnome-news-article-view.vala  gnome-news-controller.vala  gnome-news-feed.vala  gnome-news-post.vala  gnome-news-thumb.vala  gnome-news-tracker.vala  gnome-news-widget-factory.vala  main.vala  meson.build  post.vala  tracker.vala
src/ui/: application-window.vala  application.vala  article-box.vala  article-list.vala  article-view.vala  feed-view.vala  gnome-news-application-window.vala  gnome-news-application.vala  gnome-news-article-box.vala  gnome-news-article-list.vala  gnome-news-article-view.vala  gnome-news-feed-view.vala  gnome-news-new-view.vala  gnome-news-updateable.vala  gnome-news-widget-factory.vala  new-view.vala  search-view.vala  star-view.vala  switchable.vala  updateable.vala  widget-factory.vala
src/worker/: company.vala  gnome-news-company.vala  gnome-news-image-loader.vala  gnome-news-worker.vala  image-loader.vala  worker.vala
